# MLOPS_PROJECT

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  README.md  dvc.yaml  mlflow.db  params.yaml  pyproject.toml
.dvc/: config
app/: main.py
app/templates/: index.html
dags/: ml_pipeline_dag.py
src/: __init__.py  register_artifacts.py
src/DataLoading/: load_data.py
src/DataPreprocessing/: preprocess_data.py
src/FeatureEnginnering/: engineer_features.py
src/ModelEvaluation/: evaluate_model.py
src/ModelTraining/: train_model.py
